Tweaking change log

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2015-03-11 v0.1.1.0
 	Handles indentation when the AST is edited
+	Major rework of internal monads by @mpickering
 2015-01-28 v0.1.0.1
 	Update cabal to prevent building with GHC 7.70,thanks @peti
 2015-01-24 v0.1.0.0
