--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-08-13 v0.3.1.1
+	* Add missing test files to sdist, closes #23
+
 2015-08-02 v0.3.1
 
 	* Mark LHS at the beginning of HsCase and HsIf expressions
