--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-09-28 v0.4.1
+	* Revert removing cast from markLocated until further inspection in HaRe.
+
 2015-09-28 v0.4.0.0
 	* Rework HasDecls so that there are only instances for which it is
 	idempotent. Provide functions for managing an LHsBind which is not
