--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-06-03 v0.5.1.1
+	* Fix haddocks for GHC 8.0 (@phadej)
+	* Add test files for ghc710-only to dist tarball (#41)
 2016-06-02 v0.5.1.0
 	* Support for GHC 8.0.1
 	* Add graftT to the Transform module, courtesy of @xich
