--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2017-05-17 v0.5.4.0
+	* Support GHC 8.2 (rc2)
 2017-05-05 v0.5.3.1
 	* Fix bug roundtripping optional semicolons on if statements.
 2017-02-07 v0.5.3.0
