--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-00-27 v0.5.6.0
+	* Support GHC 8.4 slpha2
+	* Include test examples for GHC 8.2
+	* Fix parseModuleFromString to correctly handle the sheband case (@lspitzner)
 2017-07-23 v0.5.5.0
 	* Support GHC 8.2.1
 2017-05-17 v0.5.4.0
