--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2019-08-28 v0.6.2
+        * Support GHC 8.8.1 (release candidate)
 2019-05-27 v0.6.1
         * Support GHC 8.8 (alpha1)
 2019-03-01 v0.6
