--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2020-07-16 v0.6.3.2
+	* Add support for GHC 8.8.4
 2020-06-13 v0.6.3.1
 	* Always print "=>" in ConDecl (for GHC >= 8.6) by @zliu41
 2020-03-26 v0.6.3
