--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2021-02-01 v0.6.3.4
+	* Use env var to get ghc libdir by @jneira
 2020-11-11 v0.6.3.3
 	* Sort comments properly, ignoring SrcSpan's file by @zliu41
 2020-07-16 v0.6.3.2
