--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2021-02-24 v0.6.4
+	* Add support for GHC 9.0.1
 2021-02-01 v0.6.3.4
 	* Use env var to get ghc libdir by @jneira
 2020-11-11 v0.6.3.3
