--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2021-08-23 v1.1
+	* Add support for GHC 9.2 rc1, and this version drops support for
+	prior GHC versions.
 2021-02-24 v0.6.4
 	* Add support for GHC 9.0.1
 2021-02-01 v0.6.3.4
