--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-01-03 v1.4
+	* Fix handling of AnnContext (@pepeiborra)
+	* Fix crashy bogus instances (@pepeiborra)
+	* Remove head.hackage overlay from cabal project file
 2021-11-23 v1.3
 	* Update for GHC 9.2.1 as released
 	* Introduce makeDeltaAst command to convert all EpaSpan's to equivalent EpaDelta versions
