--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2022-11-08 v1.6.1
+	* Add GHC 9.4.4 to CI
+	* Add support for exact printing HsDocTy. #121
+2022-11-08 v1.6.1
 	* Support GHC 9.4.3
 2022-09-30 v1.6.0
 	* Support GHC 9.4.1 and GHC 9.4.2
