--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2023-06-04 v1.6.1.3
+	* Fix support for exact printing when using GHC option --haddock #125
 2023-05-31 v1.6.1.2
 	* Add GHC 9.4.5 to CI
 	* Add support for exact printing when using GHC option --haddock #125
