--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2022-12-19 v1.7.1.0
+	* Add CI for GHC 9.6.3
+	* Reinstate MonadTrans on TransFormT (via @Vekhir)
 2022-11-08 v1.7.0.1
 	* Add CI for GHC 9.6.2
 	* Correctly deal with comments when using GHC flag -haddock
