--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-01-21 v1.12.0.0
+	* Harmonise layout processing so we do not have a special case for
+	the top level This is a breaking change, in that the hand-crafted
+	different line deltas will have to have 1 subtracted from the
+	column.
 2024-12-06 v1.11.0.0
 	* Support GHC 9.12.1 (rc1)
 2024-05-21 v1.10.0.0
